# sampvoice

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.ru.md  sampvoice.sln
.github/workflows/: build.yml
client/: BlackList.cpp  BlackList.h  CMakeLists.txt  Channel.h  ControlPacket.cpp  ControlPacket.h  GlobalStream.h  Header.h  LocalStream.h  MicroIcon.cpp  MicroIcon.h  Network.cpp  Network.h  Playback.cpp  Playback.h  Plugin.cpp  Plugin.h  PluginConfig.cpp  PluginConfig.h  PluginMenu.cpp  PluginMenu.h  Record.cpp  Record.h  SpeakerList.cpp  SpeakerList.h  Stream.h  StreamAtObject.h  StreamAtPlayer.h  StreamAtPoint.h  StreamAtVehicle.h  StreamInfo.h  VoicePacket.cpp  VoicePacket.h  main.cpp
client/include/util/: AddressesBase.cpp  AddressesBase.h  BlurEffect.cpp  BlurEffect.h  GameUtil.cpp  GameUtil.h  ImGuiUtil.cpp  ImGuiUtil.h  KeyFilter.cpp  KeyFilter.h  Logger.cpp  Logger.h  Memory.hpp  Path.cpp  Path.h  RakNet.cpp  RakNet.h  Render.cpp  Render.h  Resource.cpp  Resource.h  Samp.cpp  Samp.h  Texture.cpp  Texture.h
client/resources/: gauss.hlsl
docker/: Dockerfile  build.sh  docker-entrypoint.sh
lib/omp-netcode/: CMakeLists.txt
server/: CMakeLists.txt  ControlPacket.cpp  ControlPacket.h  DynamicLocalStreamAtObject.cpp  DynamicLocalStreamAtObject.h  DynamicLocalStreamAtPlayer.cpp  DynamicLocalStreamAtPlayer.h  DynamicLocalStreamAtPoint.cpp  DynamicLocalStreamAtPoint.h  DynamicLocalStreamAtVehicle.cpp  DynamicLocalStreamAtVehicle.h  DynamicStream.cpp  DynamicStream.h  Effect.cpp  Effect.h  EffectManager.cpp  EffectManager.h  GlobalStream.cpp  GlobalStream.h  Header.h  LocalStream.cpp  LocalStream.h  NetHandler.cpp  NetHandler.h  Network.cpp  Network.h  Parameter.cpp  Parameter.h  Pawn.cpp  Pawn.h  PlayerInfo.h  PlayerStore.cpp  PlayerStore.h  PointStream.cpp  PointStream.h  StaticLocalStreamAtObject.cpp  StaticLocalStreamAtObject.h  StaticLocalStreamAtPlayer.cpp  StaticLocalStreamAtPlayer.h  StaticLocalStreamAtPoint.cpp  (+11 more)
server/include/: MPMCQueue.h  SPSCQueue.h
server/include/pawn/: amxplugin.cpp  plugincommon.h
server/include/pawn/amx/: amx.h  getch.h  sclinux.h
server/include/raknet/: bitstream.cpp  bitstream.h  networktypes.h
server/include/util/: logger.cpp  logger.h  memory.hpp  ompnet.cpp  ompnet.h  raknet.cpp  raknet.h  timer.cpp  timer.h
server/include/ysf/utils/: memory.h
